# cpplox-interpreter

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  conanfile.py
cmake/: ClangWarnings.cmake  MagicEnum.cmake  Sanitizers.cmake
cmake/toolchains/: force-clang.cmake  system-clang-libcxx.cmake
conan/: base  clang  clang-libc++  clang.txt  clang19  gcc
cpplox2/: CMakeLists.txt  cpplox.cppm  main.cpp
cpplox2/cpplox/: Chunk.cpp  Compiler.cpp  CompilerImpl.cpp  Debug.cpp  Object.cpp  Scanner.cpp  SourceLocation.cpp  Value.cpp  ValueFormatter.cpp  VirtualMachine.cpp  VirtualMachineImpl.cpp  exits.cpp
snippets/: anonymous-functions.lox  blocks.lox  classes.lox  clock.lox  conditions.lox  fizzbuzz.lox  functions.lox  inheritance.lox  loopcontrol.lox  objects.lox  simple-classes.lox  simple-functions.lox  simple-objects.lox  vector-challenge.lox
src/: CMakeLists.txt  Lox.cpp  Scanner.cpp  Token.cpp  cpplox.cppm  exits.cpp  main.cpp
src/cpplox/: Chunk.cpp  Chunk.cppm  Compiler.cpp  Compiler.cppm  CompilerImpl.cpp  Debug.cpp  Debug.cppm  Diagnostics.cpp  EnumFormatter.cpp  Environment.cpp  ExprOperandConverter.cpp  Interpreter.cpp  Lox.cpp  LoxImpl.cpp  Obj.cppm  ObjType.cppm  Object.cpp  Object.cppm  ObjectFwd.cppm  OpCode.cppm  Parser.cpp  ParserError.cpp  PrettyPrinter.cpp  Resolver.cpp  RuntimeError.cpp  Scanner.cpp  Scanner.cppm  ScopeExit.cpp  SourceLocation.cpp  SourceLocation.cppm  Token.cpp  Token.cppm  TokenType.cpp  Value.cpp  Value.cppm  ValueImpl.cpp  ValueTypes.cpp  VirtualMachine.cpp  VirtualMachineImpl.cpp  exits.cpp  (+1 more)
src/grammar/: ASTSerializer.cpp.j2  Expr.cpp.j2  ExprSerializer.cpp.j2  Grammar.cpp.j2  GrammarSerializer.cpp.j2  Stmt.cpp.j2  StmtSerializer.cpp.j2  expressions.yaml  generate.cpp  generate.py  grammar.json  grammar.txt  grammar.yaml  jinja2_yaml_binding.cpp  statements.yaml
tests/: CMakeLists.txt  testrunner.cmake
tests/testcases/: unexpected_character.lox.err
tests/testcases/assignment/: grouping.lox.err  infix_operator.lox.err  prefix_operator.lox.err  to_this.lox.err  undefined.lox.err
tests/testcases/call/: num.lox.err  object.lox.err  string.lox.err
tests/testcases/class/: empty.lox.out  inherit_self.lox.err  local_inherit_other.lox.out  local_inherit_self.lox.err  local_reference_self.lox.out  reference_self.lox.out
tests/testcases/constructor/: call_init_early_return.lox.out  call_init_explicitly.lox.out  default.lox.out  default_arguments.lox.err  early_return.lox.out  extra_arguments.lox.err  missing_arguments.lox.err  return_in_nested_function.lox.out  return_value.lox.err
tests/testcases/field/: call_nonfunction_field.lox.err  get_on_class.lox.err  get_on_function.lox.err  get_on_string.lox.err  set_evaluation_order.lox.err  set_on_bool.lox.err  set_on_class.lox.err  set_on_function.lox.err  set_on_nil.lox.err  set_on_num.lox.err  undefined.lox.err
tests/testcases/for/: class_in_body.lox.err  fun_in_body.lox.err  statement_condition.lox.err  statement_increment.lox.err  statement_initializer.lox.err  var_in_body.lox.err
tests/testcases/function/: body_must_be_block.lox.err  extra_arguments.lox.err  local_mutual_recursion.lox.err  missing_arguments.lox.err  missing_comma_in_parameters.lox.err  nested_block.lox  print.lox.out  too_many_arguments.lox.err  too_many_parameters.lox.err
tests/testcases/if/: class_in_else.lox.err  class_in_then.lox.err  fun_in_else.lox.err  fun_in_then.lox.err  var_in_else.lox.err  var_in_then.lox.err
tests/testcases/inheritance/: inherit_from_function.lox.err  inherit_from_nil.lox.err  inherit_from_number.lox.err  parenthesized_superclass.lox.err
tests/testcases/method/: extra_arguments.lox.err  missing_arguments.lox.err  not_found.lox.err  print_bound_method.lox.out  refer_to_name.lox.err  too_many_arguments.lox.err  too_many_parameters.lox.err
tests/testcases/number/: decimal_point_at_eof.lox.err  leading_dot.lox.err  trailing_dot.lox.err
tests/testcases/operator/: add_bool_string.lox.err  add_num_nil.lox.err  add_string_nil.lox.err  greater_or_equal_nonnum_num.lox.err  less_or_equal_num_nonnum.lox.err  negate_nonnum.lox.err
tests/testcases/print/: missing_argument.lox.err
tests/testcases/regression/: 394.lox.out
tests/testcases/return/: at_top_level.lox.err
tests/testcases/string/: error_after_multiline.lox.err  unterminated.lox.err
tests/testcases/super/: extra_arguments.lox.err  missing_arguments.lox.err  no_superclass_bind.lox.err  no_superclass_method.lox.err  parenthesized.lox.err  super_at_top_level.lox.err  super_in_top_level_function.lox.err  super_without_dot.lox.err  super_without_name.lox.err
tests/testcases/this/: nested_class.lox.out  this_at_top_level.lox.err  this_in_top_level_function.lox.err
tests/testcases/variable/: collide_with_parameter.lox.err  duplicate_local.lox.err  duplicate_parameter.lox.err  undefined_global.lox.err  undefined_local.lox.err  use_false_as_var.lox.err  use_local_in_initializer.lox.err  use_nil_as_var.lox.err  use_this_as_var.lox.err
tests/testcases/while/: class_in_body.lox.err  fun_in_body.lox.err  var_in_body.lox.err
thd-modules/: CMakeLists.txt  fast_float.cppm  jinja2cpp.cppm  magic_enum.cppm  yaml-cpp.cppm
